swagger to include filtering
